Let user sign-up a new account.
Signed-off-by: Thinker Lee <thinker.li@gmail.com>

--- a/whisper/templates/whisper/codeview.html
+++ b/whisper/templates/whisper/codeview.html
@@ -146,6 +146,9 @@
             {% if user %}
             User: {{ user }}
             <a href="/accounts/logout">[Logout]</a>
+            {% else %}
+            <a href="/accounts/login">Login</a> /
+            <a href="/register">Sign-up</a>
             {% endif %}
           </div>
           {% if discussion_id %}
