--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,4 +1,5 @@
 {% block content %}
 <p>Logged out!</p>
-<a href="{% url 'login'%}">Click here to login again.</a>
+<p><a href="{% url 'login'%}">Click here to login again.</a></p>
+<p><a href="/whisper/code">Click here to browse code.</a></p>
 {% endblock %}
