--- a/whisper/templates/whisper/empty.html
+++ b/whisper/templates/whisper/empty.html
@@ -8,6 +8,9 @@ Do <b>double-click</b> on a line in a file to add a <em>new comment</em>.
 The file will be loaded and scrolled to the line when you
 click on a comment.  It will show a "Reply" botton as well.
 
+You can modify your discussions, comments, or replies by
+double-clicking on them.
+
     </pre>
 </div></div>
 
