Refresh cookie for rightbar size ony if there is.
Signed-off-by: Thinker Lee <thinker.li@gmail.com>

--- a/whisper/templates/whisper/codeview.html
+++ b/whisper/templates/whisper/codeview.html
@@ -838,7 +838,8 @@
             out.className = "right_big";
         }
 
-        setCookie("right_size", size); // refresh
+        if (size)
+            setCookie("right_size", size); // refresh
 
         right_size.addEventListener("click", function (evt) {
             if (getCookie("right_size") == "big") {
